# manga-tracker

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Procfile  README.md  add_missing_services.py  app.json  codecov.yml  database.sql  maintenance.py  manga-tracker.example.service  manga-tracker.example.timer  migrations-config.json  mypy.ini  package-lock.json  package.json  pgsync-schema.example.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  ruff.toml  run.py  run_clock.py  run_specific.py  run_web.py  run_web_windows.py  scraper-pm2.example.json  setup_logging.py
.github/: dependabot.yml
.github/workflows/: dokku.yml  jest.yml  pythonapp.yml  tests.yml
migrations/: 20200725150305-createDb.js  20200725150355-createServices.js  20200913115934-disableJaiminisBox.js  20201003132854-addMangaServiceFeedUrl.js  20201005112247-mangaplusServiceWhole.js  20201008110445-addMissingIndexes.js  20201013144511-updateMergeManga.js  20201108141847-createTable-scheduled-runs.js  20210131171057-manga-views.js  20210211185222-drop-search-indexes.js  20210216151728-release-date-not-null.js  20210424194638-notNull-chapters.js  20210503152822-updateMergeManga-serviceParam.js  20210511092305-add_service_config.js  20210514141855-update-KireiCake.js  20210603192618-createTable-authors-and-groups.js  20210613151016-add-manga-service-service-id-title-id-key.js  20210707161003-update-check-intervals.js  20220120193943-add-service-comikey.js  20220320143953-notifications-tables.js  20220328100417-add-notification-name.js  20220402181715-webhook-notification.js  20220608202021-add-service-azuki.js  20220709082850-update-merge-manga.js  20220709184553-add-timezones.js  20221221130555-reset-service-counter.js  20230115212808-notificationOverrides.js  20230205105701-update-mangaplus-api.js  20230226205448-next-auth-tables.js  20230304085407-modify-theme.js  20230305082633-user-deletion.js  20230819201806-fix-session-expiry.js  20250621185345-add-comick.js  20250723105224-add-cubari.js  20250726113624-fix-comick-chapter-url.js  20251109171101-add-kmanga.js  20251221192011-remove-next-auth.js
migrations/sqls/: 20200725150305-createDb-down.sql  20200725150305-createDb-up.sql  20200725150355-createServices-up.sql  20200913115934-disableJaiminisBox-down.sql  20200913115934-disableJaiminisBox-up.sql  20201003132854-addMangaServiceFeedUrl-down.sql  20201003132854-addMangaServiceFeedUrl-up.sql  20201005112247-mangaplusServiceWhole-down.sql  20201005112247-mangaplusServiceWhole-up.sql  20201008110445-addMissingIndexes-down.sql  20201008110445-addMissingIndexes-up.sql  (+46 more)
scripts/: build_protoc.sh  deploy_scrapers.sh  migrate_mangadex.py  postinstall.js  postinstall.sh
src/: add_missing_services.py  constants.py  enums.py  scheduler.py  setup_logging.py
unit-tests/: test_utilities.py
web/: .babelrc  .eslintrc.cjs  .eslintrc.json  .gitignore  .nycrc.server.yaml  app.py  babel.config.js  cypress.config.ts  eslint.config.mjs  exceptions.py  initDb.js  jest.config.cjs  jest.config.js  loader.js  manga_extension.py  next.config.js  next.config.ts  old.eslintrc.cjs  package-lock.json  package.json  pnpm-lock.yaml  server.js  server.ts  setupTests.js  setupTests.ts  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
(+670 files in other folders)
