[project]
name = "manga-tracker"
requires-python = ">=3.13"
version = "1.0.0"
description = ""
authors = [{ name = "s0hv", email =  "s0hvaperuna@gachimuchi.men" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "ansicolors~=1.1.8",
    "cssselect~=1.3.0",
    "discord-webhook~=1.4.1",
    "elasticsearch~=7.17.12",
    "feedparser~=6.0.11",
    "lxml~=5.3.1",
    "protobuf~=6.30.1",
    "psycopg[c,pool]~=3.2.6",
    "pydantic~=2.10.6",
    "pydantic-extra-types~=2.10.3",
    "ratelimit~=2.2.1",
    "requests~=2.32.3",
    "sentry-sdk~=2.24.1",
]

[dependency-groups]
dev = [
    "mypy~=1.15.0",
    "mypy-protobuf~=3.6.0",
    "pytest~=8.3.5",
    "pytest-cov~=6.0.0",
    "responses~=0.25.7",
    "ruff>=0.11.2",
    "testing-postgresql @ git+https://github.com/tk0miya/testing.postgresql.git@c81ded4",
    "types-protobuf~=5.29",
    "types-requests~=2.31.0.6",
]

[tool.uv]
no-binary-package = ["psycopg"]
required-version = "~=0.6.12"
