[project]
name = "manga-tracker"
requires-python = ">=3.13"
version = "1.0.0"
description = ""
authors = [{ name = "s0hv", email =  "s0hvaperuna@gachimuchi.men" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "ansicolors~=1.1.8",
    "cssselect~=1.3.0",
    "discord-webhook~=1.4.1",
    "elasticsearch~=7.17.12",
    "feedparser~=6.0.12",
    "lxml~=6.0.2",
    "protobuf~=6.33.5",
    "psycopg[c,pool]~=3.2.12",
    "pydantic~=2.12.4",
    "pydantic-extra-types~=2.10.6",
    "ratelimit~=2.2.1",
    "requests~=2.32.5",
    "sentry-sdk~=2.43.0",
]

[dependency-groups]
dev = [
    "mypy~=1.18.2",
    "mypy-protobuf~=3.6.0",
    "pytest~=9.0.0",
    "pytest-cov~=7.0.0",
    "responses~=0.25.8",
    "ruff~=0.14.4",
    "testing-postgresql @ git+https://github.com/tk0miya/testing.postgresql.git@c81ded4",
    "types-lxml~=2025.8.25",
    "types-protobuf~=5.29",
    "types-requests~=2.31.0.6",
]
cypress = [
    "psycopg[binary,pool]~=3.2.12",
    "elasticsearch~=7.17.12",
    "ansicolors~=1.1.8",
]

[tool.uv]
no-binary-package = ["psycopg"]
required-version = "~=0.9.7"
